// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data ng-add Schematic Migration of ngrx-data Data ng-add Schematic for standalone application provides data without effects 1`] = `
"import { ApplicationConfig, provideBrowserGlobalErrorListeners } from '@angular/core';
import { provideEntityData } from '@ngrx/data';
import { entityConfig } from './entity-metadata';

export const appConfig: ApplicationConfig = {
  providers: [
    provideBrowserGlobalErrorListeners(),
    provideEntityData(entityConfig)
]
};
"
`;

exports[`Data ng-add Schematic Migration of ngrx-data Data ng-add Schematic for standalone application provides data without entityConfig 1`] = `
"import { ApplicationConfig, provideBrowserGlobalErrorListeners } from '@angular/core';
import { provideEntityData, withEffects } from '@ngrx/data';

export const appConfig: ApplicationConfig = {
  providers: [
    provideBrowserGlobalErrorListeners(),
    provideEntityData({}, withEffects())
]
};
"
`;

exports[`Data ng-add Schematic Migration of ngrx-data Data ng-add Schematic for standalone application provides default data setup 1`] = `
"import { ApplicationConfig, provideBrowserGlobalErrorListeners } from '@angular/core';
import { provideEntityData, withEffects } from '@ngrx/data';
import { entityConfig } from './entity-metadata';

export const appConfig: ApplicationConfig = {
  providers: [
    provideBrowserGlobalErrorListeners(),
    provideEntityData(entityConfig, withEffects())
]
};
"
`;
